--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ margin-right: 10px;
 
 @media(min-width:768px) {
 header nav {
-    display: block;
+    display: flex;
 }
 
 .fa-bars {
@@ -147,5 +147,5 @@ display: none;
 }
 
 footer {
-    
+
 }
