--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
 
 * {
     text-decoration: none;
+  
+    
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
@@ -18,10 +20,12 @@ body {
 
 /* Mobile First */
 header {
-    display: flex;
+    /* display: flex;
 
     justify-content: space-between;
-    align-items: center;
+    align-items: center; */
+    display: flex;
+    justify-content: space-between;
 
 
 }
@@ -51,6 +55,10 @@ header nav a {
 .introduction .intro-left-side h1 {
     font-weight: 700;
     margin-bottom: 20px;
+    font-size: 35px;
+    text-align: center;
+
+    /* text-align:left */
 }
 
 
@@ -79,6 +87,30 @@ align-items: center;
 margin-right: 10px;
 }
 
+
+.introduction .intro-right-side img {
+    width: 300px;
+    margin: 0 auto;
+}
+
+
+.emekdaslar {
+  
+    padding: 100px 0;
+}
+.emekdaslar h6 {
+    text-align: center;
+    font-size: 18px;
+    font-weight: 100;
+}
+
+
+.shirketler img:nth-child(1),
+.shirketler img:nth-child(2) {
+    display: none;
+}
+ 
+
 /* INTRODUCTION end */
 
 @media(max-width:575px) {
@@ -99,6 +131,48 @@ margin-right: 10px;
         max-width: 720px;
         margin: 0 auto;
     }
+
+    header nav {
+        display: block;
+    }
+    
+    .fa-bars {
+    display: none;
+    }
+
+    .introduction {
+        display: flex;
+  
+    }
+
+    .introduction .intro-left-side {
+        padding-top: 70px;
+    }
+
+    .introduction .intro-left-side h1 {
+        font-size: 34px;
+        text-align: left;
+    }
+
+    .intro-right-side {
+        margin-left: 20px;
+        padding-top: 40px;
+    }
+
+    .introduction .intro-right-side img {
+        width: 400px;
+    }
+
+    .shirketler {
+        display: flex;
+         justify-content: center;
+     }
+ 
+     .shirketler img {
+         margin-right: 80px;
+     }
+
+
 }
 
 
@@ -108,11 +182,7 @@ margin-right: 10px;
         margin: 0 auto;
     }
 
-    .introduction {
-        display: flex;
-        /* flex-direction: column; */
-        /* justify-content: center; */
-    }
+  
 
     .introduction .intro-left-side h1 {
         font-size: 72px;
@@ -127,6 +197,13 @@ margin-right: 10px;
     .introduction .intro-right-side {
         padding-top: 72px;
     }
+
+
+    /* partnyirlar */
+
+ 
+
+   
 }
 
 @media(min-width:1200px) {
@@ -136,15 +213,6 @@ margin-right: 10px;
     }
 }
 
-@media(min-width:768px) {
-header nav {
-    display: block;
-}
-
-.fa-bars {
-display: none;
-}
-}
 
 footer {
     
